[package]
name = "image-processors"
version = "0.1.0"
edition = "2024"

[lib]
name = "image_processors_py"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "image-processors"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
ndarray = "0.17.2"
numpy = "0.28.0"
pyo3 = { version = "0.28.0", features = ["extension-module"] }
rayon = "1.12.0"
thiserror = "2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
